@@ -69,7 +69,7 @@ int RandomVariableHp(int pt,int command,CConfigData *config){
 	if (command==MAKE){
 		// within 10% of number with a min of pt and a max of maxHp
 		CTibiaCharacter* self=reader.readSelfCharacter();
-		setHp[pt]=CModuleUtil::randomFormula((int)(*(int*)pt),(int)((*(int*)pt)*0.05),self->maxHp+1);
+		setHp[pt]=CModuleUtil::randomFormula((int)(*(int*)pt),(int)((*(int*)pt)*0.05),self->maxHp);
 		delete self;
 	}
 	return setHp[pt];
@@ -84,7 +84,7 @@ int RandomVariableMana(int pt,int command,CConfigData *config){
 	if (command==MAKE){
 		// within 10% of number with a min of pt and a max of maxMana
 		CTibiaCharacter* self=reader.readSelfCharacter();
-		setMana[pt]=CModuleUtil::randomFormula((int)(*(int*)pt),(int)((*(int*)pt)*0.05),self->maxMana+1);
+		setMana[pt]=CModuleUtil::randomFormula((int)(*(int*)pt),(int)((*(int*)pt)*0.05),self->maxMana);
 		delete self;
 	}
 	return setMana[pt];
